--- a/boildown.css
+++ b/boildown.css
@@ -1,4 +1,4 @@
-.column { width: 30%; margin: 5% 10%; float: left; position: relative; }
+.column { width: 40%; margin: 5%; float: left; position: relative; }
 textarea { width: 100%; }
 code { padding: 1px 5px; background-color: #eee; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
