--- a/boildown.css
+++ b/boildown.css
@@ -1,12 +1,11 @@
 .column { width: 40%; margin: 5%; float: left; position: relative; }
 textarea { width: 100%; }
-code { padding: 1px 5px; background-color: #eee; }
+code { padding: 1px 5px; background-color: #eee; white-space: pre-wrap; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
-pre div { background-color: #b8e1ff; }
+pre span.highlight { background-color: #b8e1ff; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
 blockquote { font-style: italic; display: inline-block; text-align: left; }
 blockquote footer { text-align: right; font-style: normal; }
 .quote { text-align: center; }
 .quote:after { content:''; display: block; clear: both; }
-.bd-col { float: left; }
-pre span:before { content: '1.'; }
+.bd-mp[style*=' width:'] { float: left; }
