--- a/boildown.css
+++ b/boildown.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700,600);
+
 .column { width: 40%; margin: 5%; float: left; position: relative; }
 
 textarea { width: 100%; }
@@ -7,7 +9,8 @@ ins { color: #1B5E20; text-decoration: none; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
 pre span.highlight { background-color: #b8e1ff; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
-blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; white-space: pre-wrap; }
+blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; }
+blockquote div { font-style: normal; }
 .bd-mp[style*=' width:'] { float: left; }
 
 table.describe, table.example { width: 100%; border-spacing: 5px 0; }
@@ -17,5 +20,19 @@ table.describe pre.source, table.example pre.source { white-space: pre-wrap; bac
 
 table.user { border-spacing: 0 0; }
 table.user td, table.user th { padding: 3px; }
-table.user tr.border td { border-top: 1px solid black;  }
-table.user tr td.lborder { border-left: 1px solid black; }
+table.user tr.tborder > * { border-top: 2px solid black;  }
+table.user tr.bborder > * { border-bottom: 2px solid black;  }
+table.user tr .lborder { border-left: 1px solid black; }
+table.user tr .rborder { border-right: 1px solid black; }
+
+caption.top { caption-side: top; }
+caption.bottom { caption-side: bottom; }
+caption.right { caption-side: right; }
+
+.ff-sans { font-family: "Source Sans Pro", Verdana, Arial, Helvetica, sans-serif !important; }
+
+table.pad1 td, table.pad1 th { padding: 1px 2px; }
+table.pad2 td, table.pad2 th { padding: 2px 4px; }
+table.pad3 td, table.pad3 th { padding: 3px 6px; }
+table.pad4 td, table.pad4 th { padding: 4px 8px; }
+table.pad5 td, table.pad5 th { padding: 5px 10px; }
