data based block matching

--- a/boildown.css
+++ b/boildown.css
@@ -2,6 +2,8 @@
 
 .column { width: 40%; margin: 5%; float: left; position: relative; }
 
+h1,h2,h3 { clear: both; }
+
 textarea { width: 100%; }
 code { padding: 1px 5px; background-color: #eee; white-space: pre-wrap; }
 del { color: #D50000; }
@@ -11,7 +13,6 @@ pre span.highlight { background-color: #b8e1ff; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
 blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; }
 blockquote div { font-style: normal; }
-.bd-mp[style*=' width:'] { float: left; }
 
 table.describe, table.example { width: 100%; border-spacing: 5px 0; }
 table.describe td { width: 50%; vertical-align: top; }
