--- a/boildown.css
+++ b/boildown.css
@@ -7,7 +7,7 @@ p { margin: 0; padding: 0; }
 p + p, * + p { margin: 0.6em 0 0.4em 0; padding: 0; }
 textarea { width: 100%; }
 code { padding: 1px 5px; background-color: #ddd; white-space: pre-wrap; }
-kbd { background-color: #bbb; display: inline-block; padding: 5px; border-radius: 4px; }
+kbd { background-color: #ddd; display: inline-block; padding: 5px; border-radius: 4px; border: 1px solid #ccc; min-width: 1em; text-align: center; }
 del { color: #D50000; }
 ins { color: #1B5E20; text-decoration: none; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
