--- a/boildown.css
+++ b/boildown.css
@@ -2,9 +2,11 @@
 
 .column { width: 40%; margin: 5%; float: left; position: relative; }
 
-h1,h2,h3 { clear: both; }
 p { margin: 0; padding: 0; }
 p + p, * + p { margin: 0.6em 0 0.4em 0; padding: 0; }
+p:first-child + * { margin-top: 0.6em; }
+
+h1,h2,h3 { clear: both; }
 textarea { width: 100%; }
 code { padding: 1px 5px; background-color: #ddd; white-space: pre-wrap; }
 kbd { background-color: #ddd; display: inline-block; padding: 5px; border-radius: 4px; border: 1px solid #ccc; min-width: 1em; text-align: center; }
@@ -14,12 +16,15 @@ pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9
 pre span.highlight { background-color: #b8e1ff; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
 blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; }
-blockquote div { font-style: normal; }
+footer { font-style: normal; }
+caption.top { caption-side: top; }
+caption.bottom { caption-side: bottom; }
+
+pre.source { white-space: pre-wrap; background-color: #FFF9C4; margin: 0; }
 
 table.describe, table.example { width: 100%; border-spacing: 5px 0; }
 table.describe td { width: 50%; vertical-align: top; }
 table.example td { width: 50%; }
-table.describe pre.source, table.example pre.source { white-space: pre-wrap; background-color: #FFF9C4; margin: 0; }
 
 table.user { border-spacing: 0 0; }
 table.user td, table.user th { padding: 3px; }
@@ -28,9 +33,6 @@ table.user tr.bborder > * { border-bottom: 2px solid black;  }
 table.user tr .lborder { border-left: 1px solid black; }
 table.user tr .rborder { border-right: 1px solid black; }
 
-caption.top { caption-side: top; }
-caption.bottom { caption-side: bottom; }
-caption.right { caption-side: right; }
 
 .ff-sans { font-family: "Source Sans Pro", Verdana, Arial, Helvetica, sans-serif !important; }
 
