--- a/boildown.css
+++ b/boildown.css
@@ -9,18 +9,18 @@ p:first-child + * { margin-top: 0.6em; }
 h1,h2,h3 { clear: both; }
 textarea { width: 100%; }
 code { padding: 1px 5px; background-color: #ddd; white-space: pre-wrap; }
-kbd { background-color: #ddd; display: inline-block; padding: 5px; border-radius: 4px; border: 1px solid #ccc; min-width: 1em; text-align: center; }
+kbd { background-color: #ddd; display: inline-block; padding: 4px 5px; border-radius: 4px; border: 1px solid #ccc; min-width: 1em; text-align: center; font-family: "Source Sans Pro", monospace; font-size: 12px; line-height: 1em; }
 del { color: #D50000; }
 ins { color: #1B5E20; text-decoration: none; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
-pre span.highlight { background-color: #b8e1ff; }
+pre span.highlight { background-color: #FFF59D; display: block; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
 blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; }
 footer { font-style: normal; }
 caption.top { caption-side: top; }
 caption.bottom { caption-side: bottom; }
 
-pre.source { white-space: pre-wrap; background-color: #FFF9C4; margin: 0; }
+pre.source { white-space: pre-wrap; background-color: #E3F2FD; margin: 0; }
 
 table.describe, table.example { width: 100%; border-spacing: 5px 0; }
 table.describe td { width: 50%; vertical-align: top; }
