--- a/boildown.css
+++ b/boildown.css
@@ -13,7 +13,8 @@ kbd { background-color: #ddd; display: inline-block; padding: 4px 5px; border-ra
 del { color: #D50000; }
 ins { color: #1B5E20; text-decoration: none; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
-pre span.highlight { background-color: #FFF59D; display: block; }
+pre .highlight { background-color: #FFF59D; display: block; }
+pre em { background-color: #FFF59D; font-style: normal; font-weight: bold; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
 blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; }
 footer { font-style: normal; }
