--- a/boildown.css
+++ b/boildown.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700,600);
 
-.column { width: 40%; margin: 5%; float: left; position: relative; }
+.column { width: 46%; margin: 2%; float: left; position: relative; }
 
 p { margin: 0; padding: 0; }
 p + p, * + p { margin: 0.6em 0 0.4em 0; padding: 0; }
@@ -13,8 +13,7 @@ kbd { background-color: #ddd; display: inline-block; padding: 4px 5px; border-ra
 del { color: #D50000; }
 ins { color: #1B5E20; text-decoration: none; }
 pre { padding: 5px; margin: 3px 0; line-height: 1.4em; background-color: #e9e9e9; }
-pre .highlight { background-color: #FFF59D; display: block; }
-pre em { background-color: #FFF59D; font-style: normal; font-weight: bold; }
+pre code { background-color: inherit; padding: 0; }
 hr { border-width: 0; border-top: 1px solid #ccc; height: 0; }
 blockquote { font-style: italic; display: table; text-align: left; margin: 0 auto; }
 footer { font-style: normal; }
@@ -22,6 +21,7 @@ caption.top { caption-side: top; }
 caption.bottom { caption-side: bottom; }
 
 pre.source { white-space: pre-wrap; background-color: #E3F2FD; margin: 0; }
+pre.source span { color: #bbb; }
 
 table.describe, table.example { width: 100%; border-spacing: 5px 0; }
 table.describe td { width: 50%; vertical-align: top; }
